<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/refresh"
        android:title="@string/s_refresh_huds"
        android:orderInCategory="10"
        app:showAsAction="never" />
    <item
        android:id="@+id/abrir_con_fbrowser"
        android:title="@string/s_abrir_adm_arch"
        android:orderInCategory="20"
        app:showAsAction="never" />
    <item
        android:id="@+id/invertOrder"
        android:title="@string/s_invert_order"
        android:orderInCategory="30"
        app:showAsAction="never" />
    <item
        android:id="@+id/openFile"
        android:title="@string/s_open_file"
        android:orderInCategory="40"
        app:showAsAction="never" />

</menu>
