<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/com.mebene.ACHud"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_floating_material_dark"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV_ruta"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:textSize="@dimen/abc_text_size_small_material" />

            <ImageButton
                android:id="@+id/ibInfoData"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@mipmap/ic_icono_bsckground_unselected"
                android:src="@mipmap/ic_action_info" />
        </LinearLayout>

        <ListView
            android:id="@+id/lst_archivos_datos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:background="@color/background_material_light"
            android:choiceMode="singleChoice"
            android:divider="@color/background_floating_material_dark"
            android:fadeScrollbars="false"
            android:listSelector="@color/dim_foreground_disabled_material_light"
            android:scrollbarThumbVertical="@drawable/my_scrollbar"
            android:scrollbarTrackVertical="@color/dim_foreground_material_dark">

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tV_ruta_esquemas_subs"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="top"
            android:gravity="top|center_horizontal"
            android:minHeight="25dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/s_esquemas"
            android:textSize="@dimen/abc_text_size_title_material" />

        <Spinner
            android:id="@+id/lstEsquemas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_drop_down_normal"
            android:popupBackground="@color/background_floating_material_light"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iV_Huds_datos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:src="@mipmap/no_preview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:gravity="top|left|center_horizontal"
                    android:minHeight="25dp"
                    android:text="@string/s_irm"
                    android:textSize="@dimen/abc_text_size_title_material" />

                <ImageButton
                    android:id="@+id/ib_irm_down"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="top|center_vertical|center_horizontal"
                    android:layout_marginTop="5dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:rotation="90"
                    android:src="@mipmap/ic_action_playback_play" />

                <EditText
                    android:id="@+id/et_irm"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginTop="5dp"
                    android:background="@color/background_floating_material_light"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/texto_obscuro" />

                <ImageButton
                    android:id="@+id/ib_irm_up"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="top|center_vertical|center_horizontal"
                    android:layout_marginTop="5dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:rotation="-90"
                    android:src="@mipmap/ic_action_playback_play" />
            </LinearLayout>

            <TextView
                android:id="@+id/tV_delay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal"
                android:paddingTop="15dp"
                android:text="@string/s_delay"
                android:textSize="@dimen/abc_text_size_title_material" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="@dimen/abc_text_size_subtitle_material_toolbar"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="Min"
                    android:textSize="@dimen/abc_text_size_subtitle_material_toolbar" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text=":"
                    android:textSize="@dimen/abc_text_size_subtitle_material_toolbar" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="@dimen/abc_text_size_subtitle_material_toolbar"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="Seg"
                    android:textSize="@dimen/abc_text_size_subtitle_material_toolbar" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text=","
                    android:textSize="@dimen/abc_text_size_subtitle_material_toolbar" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="@dimen/abc_text_size_subtitle_material_toolbar"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="Mill"
                    android:textSize="@dimen/abc_text_size_subtitle_material_toolbar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/nP_min_delay"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text=":"
                    android:textSize="@dimen/abc_text_size_title_material" />

                <NumberPicker
                    android:id="@+id/nP_seg_delay"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text=","
                    android:textSize="@dimen/abc_text_size_title_material" />

                <NumberPicker
                    android:id="@+id/nP_millis_delay"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibProcesar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@mipmap/ic_icono_bsckground_unselected"
            android:src="@mipmap/ic_action_process_start" />

        <ImageButton
            android:id="@+id/ibRenameData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@mipmap/ic_icono_bsckground_unselected"
            android:src="@mipmap/ic_action_edit" />


        <ImageButton
            android:id="@+id/ibDeleteDato"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@mipmap/ic_icono_bsckground_unselected"
            android:src="@mipmap/ic_action_cancel" />

        <ImageButton
            android:id="@+id/ibAyudaInterfaceDatos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@mipmap/ic_icono_bsckground_unselected"
            android:src="@mipmap/ic_action_help" />

    </LinearLayout>
    </LinearLayout>
